--- a/src/Preview/Preview.css
+++ b/src/Preview/Preview.css
@@ -11,7 +11,7 @@
 
 .Preview-canvas {
   display: flex;
-  flex: 0 0 auto;
+  flex: 1 0 auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
